[jan05-1] base layout & model

--- a/Views/Main/MainPage.cshtml
+++ b/Views/Main/MainPage.cshtml
@@ -1,6 +1,6 @@
 ﻿@model aspnet1.Models.MainPageViewModel
 @{
-	ViewData["Title"] = "Main Page";
+	Layout = "~/Views/Shared/_BaseLayout.cshtml"; 
 }
 
 <p>@Model.Time</p>
