--- a/Views/Shared/_PageLayout.cshtml
+++ b/Views/Shared/_PageLayout.cshtml
@@ -3,9 +3,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"]</title>
+    <title>Title🤯</title>
 </head>
 <body>
-    @RenderBody()
+
+    <header>
+
+    </header>
+
+    <div class="container">
+        @RenderBody()
+    </div>
+
 </body>
 </html>
