--- a/Views/Layouts/BaseLayout.cshtml
+++ b/Views/Layouts/BaseLayout.cshtml
@@ -6,7 +6,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Title🤯</title>
-    <link href="~/css/base-layout.css" rel="stylesheet" />
+    <link href="~/css/layout/base.css" rel="stylesheet" />
+    @RenderSection("Styles", required: false)
 </head>
 <body>
 
