--- a/Views/Layouts/ModalLayout.cshtml
+++ b/Views/Layouts/ModalLayout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Title🤯</title>
-    <link href="~/css/page-layout.css" rel="stylesheet" />
+    <link href="~/css/layout/modal.css" rel="stylesheet" />
 </head>
 <body>
 
