--- a/Views/Root/Home.cshtml
+++ b/Views/Root/Home.cshtml
@@ -9,30 +9,33 @@
 }
 
 @foreach (Service service in Model.Services) {
-	<div class="service">
-
-		<div class="imagebox">
-			<img src="~/img/services/@service.Image" />
-		</div>
+	<div class="card">
 
 		<div class="body">
-			<a class="title">@service.Name</a>
-			<a class="text">@service.Description</a>
 
-			@if (Model.Admin == false) {
-				<div class="control-user">
-					<button>book</button>
-				</div>
-			}
+			<div class="imagebox">
+				<img src="~/img/services/@service.Image" />
+			</div>
+
+			<div class="body-content">
+				<a class="title">@service.Name</a>
+				<a class="text">@service.Description</a>
+
+				@if (Model.Admin == false) {
+					<div class="control-user">
+						<button>book</button>
+					</div>
+				}
+			</div>
+
 		</div>
 
 		@if (Model.Admin == true) {
 			<div class="control-admin">
-				<button>vis</button>
-				<button>edit</button>
-				<button>del</button>
+				<button>Visible</button>
+				<button>Edit</button>
+				<button>Delete</button>
 			</div>
-
 		}
 
 	</div>
