--- a/wwwroot/css/card.css
+++ b/wwwroot/css/card.css
@@ -1,61 +1,67 @@
-.service {
+.card {
     width: 100%;
     display: flex;
     flex-direction: column;
-    background: white;
+    background: rgb(245, 245, 245);
     box-sizing: border-box;
     border-radius: 10px;
     overflow: hidden;
     margin-top: 30px;
-    border-bottom: 1px rgb(180, 180, 180) solid;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.3);
-
-    .imagebox {
-        height: 40px;
-        width: 100%;
-
-        img {
-            object-fit: cover;
-            width: 100%;
-            height: 100%;
-        }
-    }
+    box-sizing: border-box;
+    border: 1px rgb(150, 150, 150) solid;
+    box-shadow: 1px 2px 2px 0px rgba(0, 0, 0, 0.2);
 
     .body {
-        width: 100%;
-        display: flex;
+        display:  flex;
         flex-direction: column;
-        box-sizing: border-box;
-        padding: 20px 25px;
-        border-left: 1px rgb(180, 180, 180) solid;
-        border-right: 1px rgb(180, 180, 180) solid;
-        border-top: 0;
 
-        .title {
-            font-size: 20px;
-            font-weight: 500;
-            margin-bottom: 5px;
+        .imagebox {
+            height: 70px;
+            width: 100%;
+
+            img {
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+            }
         }
-        .text {
-            font-size: 16px;
-            margin-bottom: 20px;
-        }
-        .control-user button {
-            background: rgb(0, 132, 255);
-            color: white;
-            outline: none;
-            border: 2px rgb(0, 94, 182) solid;
+
+        .body-content {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
             box-sizing: border-box;
-            border-radius: 7px;
-            height: 35px;
-            padding: 0 10px;
-            min-width: 180px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: 0.2s;
-        }
-        .control-user button:hover {
-            transform: translateY(-2px);
+            padding: 20px 25px;
+            border-top: 0;
+            overflow-wrap: break-word;
+
+            .title {
+                font-size: 20px;
+                font-weight: 500;
+                margin-bottom: 5px;
+            }
+            .text {
+                font-size: 16px;
+            }
+            .control-user button {
+                margin-top: 20px;
+                background: rgb(0, 132, 255);
+                color: white;
+                outline: none;
+                border: 2px rgb(0, 118, 227) solid;
+                box-sizing: border-box;
+                border-radius: 7px;
+                height: 35px;
+                padding: 0 10px;
+                width: 180px;
+                max-width: 100%;
+                font-size: 16px;
+                cursor: pointer;
+                transition: 0.2s;
+            }
+            .control-user button:hover {
+                transform: translateY(-2px);
+            }
         }
     }
 
@@ -63,6 +69,7 @@
         display: flex;
         flex-direction: row;
         height: 35px;
+        box-sizing: border-box;
 
         > button {
             flex-grow: 1;
@@ -71,12 +78,40 @@
             outline: none;
             box-sizing: border-box;
             border: none;
-            border-right: 1px black solid;
+            background: transparent;
+            border-top: 1px rgb(150, 150, 150) solid;
+            border-right: 1px rgb(150, 150, 150) solid;
             cursor: pointer;
         }
 
         > button:last-of-type {
             border-right: none;
         }
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .body {
+        position: relative;
+    }
+    .imagebox {
+        position: absolute;
+        right: 0;
+        width: 150px !important;
+        height: 100% !important;
+        z-index: 1;
+    }
+    .imagebox::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 2;
+        background: linear-gradient(to right, rgb(245, 245, 245) 0%, rgba(0, 0, 0, 0) 100%);
+    }
+    .body-content {
+        padding-right: 200px !important;
     }
 }
