[jan09-1] order controller, view, service

--- a/Views/Layouts/BaseLayout.cshtml
+++ b/Views/Layouts/BaseLayout.cshtml
@@ -1,4 +1,4 @@
-﻿@model BaseLayoutModel
+﻿@model aspnet1.Models.ViewModels.BaseLayoutModel
 
 <!DOCTYPE html>
 <html lang="ru">
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
 
-            <a class="title"><b>rtxdiv</b> prod.</a>
+            <p class="title"><b>rtxdiv</b> prod.</p>
 
             @if (Model.Layout.ShowRequests == true) {
 
