--- a/Views/Layouts/ModalLayout.cshtml
+++ b/Views/Layouts/ModalLayout.cshtml
@@ -14,7 +14,7 @@
 
             <div class="back" onclick="goBack()">
                 <img src="~/img/back.png" />
-                <a>НАЗАД</a>
+                <p>НАЗАД</p>
             </div>
 
         </div>
