--- a/wwwroot/css/layout/modal.css
+++ b/wwwroot/css/layout/modal.css
@@ -1,15 +1,18 @@
+* {
+    font-family: 'Segoe UI';
+}
+
 body {
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
-    font-family: 'Segoe UI';
     font-size: 15px;
     color: black;
     align-items: center;
 
     > .container:first-of-type {
-        margin-top: 50px;
+        margin-top: 80px;
     }
 }
 
@@ -30,6 +33,8 @@ header {
     background: rgb(245, 245, 245);
     box-sizing: border-box;
     position: fixed;
+    box-shadow: 0px 1px 5px 0px rgb(255, 255, 255);
+    z-index: 42;
 
     > .container {
         flex-direction: row;
@@ -47,7 +52,7 @@ header {
             aspect-ratio: 1/1;
             margin-right: 7px;
         }
-        > a {
+        > p {
             font-size: 15px;
             color: rgb(50, 50, 50);
             line-height: 0;
