[jan10-2] cookie management in requests controller

--- a/Views/Layouts/BaseLayout.cshtml
+++ b/Views/Layouts/BaseLayout.cshtml
@@ -19,7 +19,7 @@
             @if (Model.Layout.ShowRequests == true) {
 
                 <div class="requests" onclick="window.location.href='/requests'">
-                    <div class="button">Мои запросы</div>
+                    <div class="button">Мои заказы</div>
                     @if (Model.Layout.ShowNotification == true) {
                         <div class="notification">UPD</div>
                     }
